packages/tree-sitter/tdr-md-inline/test/corpus/links/basic.txt
================
Inline link
================
[text](url)
---

(inline
  (inline_link
    text: (link_text)
    destination: (link_destination)))

================
Image
================
![alt](img.png)
---

(inline
  (image
    alt: (image_alt)
    source: (link_destination)))

================
Link with emphasis in text
================
[*bold*](url)
---

(inline
  (inline_link
    text: (link_text
      (emphasis))
    destination: (link_destination)))
