packages/tree-sitter/tdr-md-inline/test/corpus/misc/basic.txt
================
Backslash escape
================
\*
---

(inline
  (backslash_escape))

================
Plain text
================
hello world
---

(inline)

================
Text then footnote
================
claim[^ref]
---

(inline
  (footnote_reference
    label: (footnote_label)))

================
Text with interpolation
================
hello ${self.x} world
---

(inline
  (interpolation
    (expression
      (access_expression
        (expression
          (self_expression))
        (identifier)))))

================
Multiple constructs
================
*em* and `code` and [link](url)
---

(inline
  (emphasis)
  (code_span
    (code_span_delimiter)
    (code_span_content)
    (code_span_delimiter))
  (inline_link
    text: (link_text)
    destination: (link_destination)))
