packages/tree-sitter/tdr-md-inline/test/corpus/references/footnotes.txt
================
Footnote in text
================
This is a claim.[^my_claim]
---

(inline
  (footnote_reference
    label: (footnote_label)))

================
Multiple footnotes
================
First[^a] and second[^b]
---

(inline
  (footnote_reference
    label: (footnote_label))
  (footnote_reference
    label: (footnote_label)))

================
Footnote with underscore
================
[^long_label_name]
---

(inline
  (footnote_reference
    label: (footnote_label)))

================
Footnote with digits
================
[^ref123]
---

(inline
  (footnote_reference
    label: (footnote_label)))
