packages/tree-sitter/tdr-md-inline/test/corpus/spans/basic.txt
================
Code span
================
`code`
---

(inline
  (code_span
    (code_span_delimiter)
    (code_span_content)
    (code_span_delimiter)))

================
Code span with backtick inside
================
``code ` here``
---

(inline
  (code_span
    (code_span_delimiter)
    (code_span_content)
    (code_span_delimiter)))

================
Math span
================
$x^2$
---

(inline
  (math_span
    (math_span_delimiter)
    (math_span_content)
    (math_span_delimiter)))

================
Interpolation
================
${self.name}
---

(inline
  (interpolation
    (expression
      (access_expression
        (expression
          (self_expression))
        (identifier)))))

================
Mixed spans and text
================
hello `code` and $math$
---

(inline
  (code_span
    (code_span_delimiter)
    (code_span_content)
    (code_span_delimiter))
  (math_span
    (math_span_delimiter)
    (math_span_content)
    (math_span_delimiter)))

================
Interpolation with index
================
${self.items[0]}
---

(inline
  (interpolation
    (expression
      (index_expression
        (expression
          (access_expression
            (expression
              (self_expression))
            (identifier)))
        (expression
          (number))))))

================
Interpolation with method call
================
${self.name.length()}
---

(inline
  (interpolation
    (expression
      (call_expression
        (expression
          (access_expression
            (expression
              (access_expression
                (expression
                  (self_expression))
                (identifier)))
            (identifier)))))))
